动态底部导航

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <li>
             <a href="新拟态/index.html">新拟态</a>
         </li>
+        <li>
+            <a href="动态底部导航栏/index.html">动态底部导航栏</a>
+        </li>
     </ul>
 </body>
 </html>
