--- a/新拟态/index.html
+++ b/新拟态/index.html
@@ -25,7 +25,7 @@
                 <img src="static/微信.png" alt="">
             </div>
             <!-- 图标名 -->
-            <p>QQ</p>
+            <p>微信</p>
         </div>
         <!-- 每个小标签 -->
         <div class="item">
@@ -34,7 +34,7 @@
                 <img src="static/支付宝.png" alt="">
             </div>
             <!-- 图标名 -->
-            <p>QQ</p>
+            <p>支付宝</p>
         </div>
         <!-- 每个小标签 -->
         <div class="item">
@@ -43,7 +43,7 @@
                 <img src="static/浏览器.png" alt="">
             </div>
             <!-- 图标名 -->
-            <p>QQ</p>
+            <p>浏览器</p>
         </div>
         <!-- 每个小标签 -->
         <div class="item">
@@ -52,7 +52,7 @@
                 <img src="static/电话.png" alt="">
             </div>
             <!-- 图标名 -->
-            <p>QQ</p>
+            <p>电话</p>
         </div>
         <!-- 每个小标签 -->
         <div class="item">
@@ -61,7 +61,7 @@
                 <img src="static/相机.png" alt="">
             </div>
             <!-- 图标名 -->
-            <p>QQ</p>
+            <p>相机</p>
         </div>
         <!-- 每个小标签 -->
         <div class="item">
@@ -70,7 +70,7 @@
                 <img src="static/短信.png" alt="">
             </div>
             <!-- 图标名 -->
-            <p>QQ</p>
+            <p>短信</p>
         </div>
         <!-- 每个小标签 -->
         <div class="item">
@@ -79,7 +79,7 @@
                 <img src="static/通讯录.png" alt="">
             </div>
             <!-- 图标名 -->
-            <p>QQ</p>
+            <p>通讯录</p>
         </div>
     </div>
 </body>
