登陆注册页

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <li>
             <a href="动态底部导航栏/index.html">动态底部导航栏</a>
         </li>
+        <li>
+            <a href="顺滑切换登陆注册页/index.html">顺滑切换登陆注册页</a>
+        </li>
     </ul>
 </body>
 </html>
