动态加载条‘

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li>
             <a href="顺滑切换登陆注册页/index.html">顺滑切换登陆注册页</a>
         </li>
+        <li>
+            <a href="彩色动态加载条/index.html">彩色动态加载条</a>
+        </li>
     </ul>
 </body>
 </html>
