静态图标替换

--- a/动态底部导航栏/index.html
+++ b/动态底部导航栏/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>动态底部导航栏</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1831845_qwtgl1jngxp.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="nav-bar">
         <div class="item active">
-            
-            <img src="static/电话.png" alt="">
+            <i class="iconfont icon-dianhua"></i>
             <p>电话</p>
         </div>
         <div class="item">
-            <img src="static/短信.png" alt="">
-            <p>短信</p>
+            <i class="iconfont icon-ditu"></i>
+            <p>地图</p>
         </div>
         <div class="item">
-            <img src="static/通讯录.png" alt="">
-            <p>通讯录</p>
+            <i class="iconfont icon-saoyisao"></i>
+            <p>扫一扫</p>
         </div>
         <div class="item">
-            <img src="static/浏览器.png" alt="">
-            <p>浏览器</p>
+            <i class="iconfont icon-shezhi"></i>
+            <p>设置</p>
         </div>
         <div id="mask"></div>
     </div>
