--- a/新拟态/index.html
+++ b/新拟态/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新拟态</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1831845_qwtgl1jngxp.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -13,16 +14,7 @@
         <div class="item">
             <!-- 图标盒子 -->
             <div class="img">
-                <img src="static/qq.png" alt="">
-            </div>
-            <!-- 图标名 -->
-            <p>QQ</p>
-        </div>
-        <!-- 每个小标签 -->
-        <div class="item">
-            <!-- 图标盒子 -->
-            <div class="img">
-                <img src="static/微信.png" alt="">
+                <i class="iconfont icon-weixin"></i>
             </div>
             <!-- 图标名 -->
             <p>微信</p>
@@ -31,7 +23,7 @@
         <div class="item">
             <!-- 图标盒子 -->
             <div class="img">
-                <img src="static/支付宝.png" alt="">
+                <i class="iconfont icon-rectangle390"></i>
             </div>
             <!-- 图标名 -->
             <p>支付宝</p>
@@ -40,25 +32,7 @@
         <div class="item">
             <!-- 图标盒子 -->
             <div class="img">
-                <img src="static/浏览器.png" alt="">
-            </div>
-            <!-- 图标名 -->
-            <p>浏览器</p>
-        </div>
-        <!-- 每个小标签 -->
-        <div class="item">
-            <!-- 图标盒子 -->
-            <div class="img">
-                <img src="static/电话.png" alt="">
-            </div>
-            <!-- 图标名 -->
-            <p>电话</p>
-        </div>
-        <!-- 每个小标签 -->
-        <div class="item">
-            <!-- 图标盒子 -->
-            <div class="img">
-                <img src="static/相机.png" alt="">
+                <i class="iconfont icon-xiangji"></i>
             </div>
             <!-- 图标名 -->
             <p>相机</p>
@@ -67,19 +41,46 @@
         <div class="item">
             <!-- 图标盒子 -->
             <div class="img">
-                <img src="static/短信.png" alt="">
+                <i class="iconfont icon-taobao"></i>
             </div>
             <!-- 图标名 -->
-            <p>短信</p>
+            <p>淘宝</p>
         </div>
         <!-- 每个小标签 -->
         <div class="item">
             <!-- 图标盒子 -->
             <div class="img">
-                <img src="static/通讯录.png" alt="">
+                <i class="iconfont icon-shoujitongxunlu"></i>
             </div>
             <!-- 图标名 -->
-            <p>通讯录</p>
+            <p>通信录</p>
+        </div>
+        <!-- 每个小标签 -->
+        <div class="item">
+            <!-- 图标盒子 -->
+            <div class="img">
+                <i class="iconfont icon-tansuob"></i>
+            </div>
+            <!-- 图标名 -->
+            <p>地图</p>
+        </div>
+        <!-- 每个小标签 -->
+        <div class="item">
+            <!-- 图标盒子 -->
+            <div class="img">
+                <i class="iconfont icon-qianbao"></i>
+            </div>
+            <!-- 图标名 -->
+            <p>钱包</p>
+        </div>
+        <!-- 每个小标签 -->
+        <div class="item">
+            <!-- 图标盒子 -->
+            <div class="img">
+                <i class="iconfont icon-class"></i>
+            </div>
+            <!-- 图标名 -->
+            <p>应用</p>
         </div>
     </div>
 </body>
