--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 图标url： -->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1831845_qwtgl1jngxp.css">
     <title>合集</title>
 </head>
 <body>
