--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <li>
             <a href="彩色动态加载条/index.html">彩色动态加载条</a>
         </li>
+        <li>
+            <a href="3D层叠效果/index.html">3D层叠效果</a>
+        </li>
+        <li>
+            <a href="3D层叠标签/index.html">3D层叠标签</a>
+        </li>
+        <li>
+            <a href="悬停景深效果/index.html">悬停景深效果</a>
+        </li>
     </ul>
 </body>
 </html>
