纯css滑动按钮

--- a/index.html
+++ b/index.html
@@ -4,31 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 图标url： -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1831845_qwtgl1jngxp.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1831845_qwtgl1jngxp.css">
     <title>合集</title>
 </head>
 <body>
     <ul>
         <li>
-            <a href="新拟态/index.html">新拟态</a>
+            <a href="001-新拟态/index.html">001-新拟态</a>
         </li>
         <li>
-            <a href="动态底部导航栏/index.html">动态底部导航栏</a>
+            <a href="002-动态底部导航栏/index.html">002-动态底部导航栏</a>
         </li>
         <li>
-            <a href="顺滑切换登陆注册页/index.html">顺滑切换登陆注册页</a>
+            <a href="003-顺滑切换登陆注册页/index.html">003-顺滑切换登陆注册页</a>
         </li>
         <li>
-            <a href="彩色动态加载条/index.html">彩色动态加载条</a>
+            <a href="004-彩色动态加载条/index.html">004-彩色动态加载条</a>
         </li>
         <li>
-            <a href="3D层叠效果/index.html">3D层叠效果</a>
+            <a href="005-3D层叠效果/index.html">005-3D层叠效果</a>
         </li>
         <li>
-            <a href="3D层叠标签/index.html">3D层叠标签</a>
+            <a href="006-3D层叠标签/index.html">006-3D层叠标签</a>
         </li>
         <li>
-            <a href="悬停景深效果/index.html">悬停景深效果</a>
+            <a href="007-悬停景深效果/index.html">007-悬停景深效果</a>
+        </li>
+        <li>
+            <a href="008-纯CSS滑动按钮/index.html">008-纯CSS滑动按钮</a>
         </li>
     </ul>
 </body>
