--- a/001-新拟态/index.html
+++ b/001-新拟态/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新拟态</title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1831845_qwtgl1jngxp.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1831845_qwtgl1jngxp.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
