新拟态播放器

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 图标url： -->
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1831845_qwtgl1jngxp.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1831845_jxzajygsth.css">
     <title>合集</title>
 </head>
 <body>
     <ul>
         <li>
-            <a href="001-新拟态/index.html">001-新拟态</a>
+            <a href="001-新拟态图标/index.html">001-新拟态图标</a>
         </li>
         <li>
             <a href="002-动态底部导航栏/index.html">002-动态底部导航栏</a>
@@ -32,6 +32,12 @@
         </li>
         <li>
             <a href="008-纯CSS滑动按钮/index.html">008-纯CSS滑动按钮</a>
+        </li>
+        <li>
+            <a href="009-手风琴菜单/index.html">009-手风琴菜单</a>
+        </li>
+        <li>
+            <a href="010-紫色登陆界面/index.html">010-紫色登陆界面</a>
         </li>
     </ul>
 </body>
