--- a/009-手风琴菜单/index.html
+++ b/009-手风琴菜单/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>手风琴菜单</title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1831845_jxzajygsth.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1831845_jxzajygsth.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
