--- a/005-3D层叠效果/index.html
+++ b/005-3D层叠效果/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <div class="container">
-    <img src="static/11.jpg" alt="">
-    <img src="static/11.jpg" alt="">
-    <img src="static/11.jpg" alt="">
-    <img src="static/11.jpg" alt="">
-    <img src="static/11.jpg" alt="">
+    <img src="../static/img/play_page.jpg" alt="">
+    <img src="../static/img/play_page.jpg" alt="">
+    <img src="../static/img/play_page.jpg" alt="">
+    <img src="../static/img/play_page.jpg" alt="">
+    <img src="../static/img/play_page.jpg" alt="">
   </div>
 </body>
 </html>
