--- a/012-新拟态播放器/index.html
+++ b/012-新拟态播放器/index.html
@@ -21,7 +21,7 @@
             </div>
             
             <div class="avatar">
-                <img src="static/avatar.jpeg" alt="">
+                <img src="../static/img/avatar.jpeg" alt="">
             </div>
 
             <div class="title">
@@ -60,7 +60,7 @@
                 
             </div>
             <div class="banner">
-                <img src="static/back.jpg" alt="">
+                <img src="../static/img/play_banner.jpg" alt="">
             </div>
             <div class="playlist">
                 <li>
