--- a/017-响应式网页背景视频/index.html
+++ b/017-响应式网页背景视频/index.html
@@ -16,7 +16,7 @@
   </div>
 
   <video id="bgvideo" poster="static/banner.jpg" autoplay muted loop>
-    <source src="../static/video/back01.mp4" type="video/mp4">
+    <source src="https://cloud.video.taobao.com//play/u/386715097/p/1/e/6/t/1/268494275631.mp4" type="video/mp4">
   </video>
 </body>
 </html>
