--- a/018-背景视频切换/index.html
+++ b/018-背景视频切换/index.html
@@ -9,20 +9,19 @@
 <body>
   <section>
     <video id="slider" autoplay muted loop>
-      <source src="../static/video/back01.mp4" type="video/mp4">
-      <source src="" type="video/mov">
+      <source src="https://cloud.video.taobao.com//play/u/386715097/p/1/e/6/t/1/268494275631.mp4" type="video/mp4">
     </video>
     <ul class="navigation">
-      <li onclick="videoUrl('../static/video/back01.mp4')">
+      <li onclick="videoUrl('https://cloud.video.taobao.com//play/u/386715097/p/1/e/6/t/1/268494275631.mp4')">
         <img src="../static/img/back01_cover.jpg" alt="">
       </li>
-      <li onclick="videoUrl('../static/video/back02.mov')">
+      <li onclick="videoUrl('https://cloud.video.taobao.com//play/u/386715097/p/1/e/6/t/1/268298374815.mp4')">
         <img src="../static/img/back02_cover.jpg" alt="">
       </li>
-      <li onclick="videoUrl('../static/video/back03.mov')">
+      <li onclick="videoUrl('https://cloud.video.taobao.com//play/u/386715097/p/1/e/6/t/1/267877304901.mp4')">
         <img src="../static/img/back03_cover.jpg" alt="">
       </li>
-      <li onclick="videoUrl('../static/video/back04.mov')">
+      <li onclick="videoUrl('https://cloud.video.taobao.com//play/u/386715097/p/1/e/6/t/1/268494647735.mp4')">
         <img src="../static/img/back04_cover.jpg" alt="">
       </li>
     </ul>
